--- a/src/de/p2tools/fileRunner/fileRunner.css
+++ b/src/de/p2tools/fileRunner/fileRunner.css
@@ -229,3 +229,20 @@
     -fx-border-color: -style-border-color-tab;
  }
 
+/* CheckBoxCell */
+.checkbox-table * {
+    -fx-background-color: transparent;
+}
+.checkbox-table:disabled {
+    -fx-opacity: 1;
+}
+.checkbox-table .box {
+    -fx-border-radius: 10px;
+    -fx-border-color: lightgray;
+}
+.checkbox-table:selected .box {
+    -fx-border-color: steelblue;
+}
+.checkbox-table:selected .mark {
+    -fx-background-color: black;
+}
