--- a/src/de/p2tools/fileRunner/fileRunner.css
+++ b/src/de/p2tools/fileRunner/fileRunner.css
@@ -260,3 +260,6 @@
 .checkbox-table:selected .mark {
     -fx-background-color: black;
 }
+.txtHash {
+    -fx-control-inner-background: lightgreen;
+}
