--- a/src/main/resources/de/p2tools/fileRunner/fileRunner.css
+++ b/src/main/resources/de/p2tools/fileRunner/fileRunner.css
@@ -1,212 +1,15 @@
 /*  Programmweites style sheet */
 .root {
-    -style-border-color-1: royalblue;
-    -style-border-color-2: royalblue;
-    -style-text-color-1: mediumblue;
-    -style-border-color-lbl: royalblue;
-    -style-border-color-tab: cornflowerblue;
 }
-.split-pane > .split-pane-divider {
-    -fx-padding: 0 0 0 0;
-}
-.tab .tab-label {
-    -fx-text-alignment: center;
-    -fx-alignment: center ;
-}
-.tab-pane {
-    -fx-border-width: 1;
-    -fx-border-color: -style-border-color-tab;
- }
-.tab-pane > .tab-header-area > .headers-region > .tab {
-    -fx-padding: 0 10 0 10;
-    -fx-border-width: 1, 2;
-    -fx-border-radius: 12 12 0 0, 10 10 0 0;
-    -fx-border-insets: 0, 4;
-    -fx-border-color: -style-border-color-1, transparent;
-    -fx-background-radius: 12 12 0 0, 10 10 0 0;
-    -fx-background-insets: 0;
-    -fx-background-color:
-             linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-             radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-text-fill: black;
- }
-.tab-pane > .tab-header-area > .headers-region > .tab:selected {
-    -fx-border-width: 2, 1, 2;
-    -fx-border-color: -style-border-color-1, transparent, transparent;
- }
-.tab-pane > .tab-header-area > .headers-region > .tab:hover {
-    -fx-border-width: 2, 1, 2;
-    -fx-border-color: -style-border-color-2, -style-border-color-1, transparent;
- }
-.tab-pane > .tab-header-area > .headers-region > .tab:pressed {
-    -fx-border-width: 1, 2, 2;
-    -fx-border-color: -style-border-color-1, -style-border-color-2, transparent;
- }
-
-.tab:selected .tab-label {
-     -fx-text-fill: -style-text-color-1;
-}
-.tab-pane > .tab-header-area > .headers-region > .tab:selected  .focus-indicator {
-    -fx-focus-color: transparent;
-    -fx-faint-focus-color: transparent;
-}
-
-.text-field{
-    -fx-border-radius: 5;
-    -fx-background-radius: 5;
-}
-.combo-box-base{
-    -fx-border-radius: 5;
-    -fx-background-radius: 5;
-}
-.button{
-    -fx-border-radius: 5;
-    -fx-background-radius: 5;
-}
-
-.toggle-button:selected {
-    -fx-base: #dcdcff;
-}
-
-/* Rahmen */
-.dialog-border {-fx-background-insets: 10, 40;
-               -fx-border-color: lightgray transparent lightgray transparent, steelblue;
-               -fx-border-insets: 0, 15;
-               -fx-border-width: 20 5, 10 3;
-               -fx-padding: 20px;
-}
-
-
-/* damit leere Tabellenzeilen nicht angezeigt werden */
-.table-row-cell:empty {
-    -fx-background-color: white;
-}
-
-.table-row-cell:empty .table-cell {
-    -fx-border-width: 0px;
-}
-
-.txtIsEmpty {
-    -fx-text-fill: red;
-    -fx-control-inner-background: antiquewhite;
-}
-
-.btnTabFile{
-    -fx-text-fill: black;
- }
- .btnTabFile-sel{
-    -fx-text-fill: -style-text-color-1;
- }
-
-
-.btnTab{
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-    -fx-alignment: center ;
-    -fx-background-color: #c3c4c4,
-        linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-        radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0,1,1;
-    -fx-text-fill: black;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 10 20 10 20;
-    -fx-border: 10;
- }
-
-.btnTab:disabled {
-    -fx-opacity: 0.6;
-}
-
- .btnTab:hover{
-    -fx-font-weight: bold;
-    -fx-alignment: center ;
-    -fx-background-color: #5d5e8c,
-        linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-        radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0,1,1;
-    -fx-text-fill: black;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 10 20 10 20;
-    -fx-border: 10;
- }
-
- .btnTab:pressed{
-    -fx-font-weight: bold;
-    -fx-alignment: center ;
-    -fx-background-color: blue,
-        linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-        radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0,1,1;
-    -fx-text-fill: black;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 10 20 10 20;
-    -fx-border: 10;
- }
-
- .btnTab-sel{
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-    -fx-alignment: center ;
-    -fx-background-color: blue,
-         linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-         radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0,1,1;
-    -fx-text-fill: -style-text-color-1;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 10 20 10 20;
-    -fx-border: 10;
- }
-
-
- .btnFunction{
-    -fx-background-color: #c3c4c4,
-        linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-        radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0,1,1;
-    -fx-text-fill: black;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 5;
-    -fx-border: 5;
- }
-
- .btnFunction:hover{
-     -fx-background-color: #f3f4f4,
-         linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 50%, white 100%),
-         radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
- }
-
- .btnFunction:pressed{
-     -fx-background-color: #5d5e8c,
-         linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 40%, white 90%),
-         radial-gradient(center 80% -70%, radius 200%, #e6e6e6 35%, rgba(230,230,230,0) 40%);
- }
-
-
-.headerLabel {
-    -fx-padding: 5 10 5 10;
-    -fx-border-width: 1;
-    -fx-border-radius: 15;
-    -fx-border-insets: 0;
-    -fx-border-color: -style-border-color-lbl;
-    -fx-background-radius: 15;
-    -fx-background-insets: 0;
-      -fx-background-color: #5d5e8c,
-             linear-gradient(from 0% 0% to 100% 100%, #d6d6d6 70%, white 100%),
-             radial-gradient(center 80% -70%, radius 200%, #e6e6e6 35%, rgba(230,230,230,0) 40%);
- }
 
 .headerLabelVertikal {
     -fx-rotate: -90;
+    -fx-text-fill: black;
     -fx-padding: 5 10 5 10;
     -fx-border-width: 1;
     -fx-border-radius: 15;
     -fx-border-insets: 0;
-    -fx-border-color: -style-border-color-lbl;
+    -fx-border-color: -style-tab-border-color-1;
     -fx-background-radius: 15;
     -fx-background-insets: 0;
       -fx-background-color: #5d5e8c,
@@ -214,35 +17,7 @@
              radial-gradient(center 80% -70%, radius 200%, #e6e6e6 35%, rgba(230,230,230,0) 40%);
 }
 
-.pane-border {
-    -fx-border-width: 1;
-    -fx-border-color: -style-border-color-tab;
- }
-.pane-border-lightgray {
-    -fx-border-width: 1;
-    -fx-border-color: #d6d6d6;
- }
-
-/* CheckBoxCell */
-.checkbox-table * {
-    -fx-background-color: transparent;
-}
-.checkbox-table:disabled {
-    -fx-opacity: 1;
-}
-.checkbox-table .box {
-    -fx-border-radius: 10px;
-    -fx-border-color: lightgray;
-}
-.checkbox-table:selected .box {
-    -fx-border-color: steelblue;
-}
-.checkbox-table:selected .mark {
-    -fx-background-color: black;
-}
-
 .txtHashOk {
-    /*-fx-background-color: lightgreen; wegen PTextfield: stat label gehts nicht */
     -fx-border-width: 2;
     -fx-border-color: green;
 }
@@ -250,7 +25,6 @@
     -fx-border-width: 2;
     -fx-border-color: lightgray;
 }
-
 .txtHash:focused {
     -fx-border-width: 2;
     -fx-border-color: transparent;
