compare fiel: show diff

--- a/src/main/resources/de/p2tools/fileRunner/fileRunner.css
+++ b/src/main/resources/de/p2tools/fileRunner/fileRunner.css
@@ -21,6 +21,10 @@
     -fx-border-width: 2;
     -fx-border-color: green;
 }
+.txtHashNotOk {
+    -fx-border-width: 2;
+    -fx-border-color: red;
+}
 .txtHash {
     -fx-border-width: 2;
     -fx-border-color: lightgray;
