--- a/src/main/resources/de/p2tools/fileRunner/fileRunner.css
+++ b/src/main/resources/de/p2tools/fileRunner/fileRunner.css
@@ -1,5 +1,7 @@
 /*  Programmweites style sheet */
+
 .root {
+    -style-extra-pane-color: derive(-fx-base,-5%);
 }
 
 .headerLabelVertikal {
@@ -36,4 +38,11 @@
 
 .lblSize {
     -fx-font-weight: bold;
+}
+
+/* farblich abgesetzter Bereich in vielen Panes/Dialogen*/
+.extra-pane {
+    -fx-background-color: -style-extra-pane-color;
+    -fx-background-radius: 3px;
+    -fx-border-color: #939a9f;
 }
