--- a/src/main/resources/de/p2tools/fileRunner/fileRunner.css
+++ b/src/main/resources/de/p2tools/fileRunner/fileRunner.css
@@ -59,8 +59,9 @@
     -fx-background-color: #c3c4c4, -lin-grad-1, -rad-grad-1;
     -fx-background-insets: 0,1,1;
     -fx-text-fill: black;
+    -fx-background-radius: 30;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
-    -fx-padding: 5 10 5 10;
+    -fx-padding: 5 15 5 15;
 }
 .btnFilter:focused{
     -fx-background-color: #355c8c, -lin-grad-1, -rad-grad-1;
